[tool.poetry]
name = "tom-help"
version = "0.1.0"
description = ""
authors = ["Dean Shaff <dean.shaff@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
zmq = "^0.0.0"
pyro4 = "=4.72"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
